# courser

./: .env.example  Cargo.toml  README.md
migrations/: 20250530064731_init.down.sql  20250530064731_init.up.sql  20250530104318_add_course_id_in_purchases_table.down.sql  20250530104318_add_course_id_in_purchases_table.up.sql  20250530182351_update_price_not_null.down.sql  20250530182351_update_price_not_null.up.sql  20250530184523_drop_admin_id_purchases_table.down.sql  20250530184523_drop_admin_id_purchases_table.up.sql
src/: errors.rs  handler.rs  main.rs  utils.rs
src/handlers/: admin.rs  course.rs  mod.rs  user.rs
src/middlewares/: admin.rs  user.rs
src/models/: admin.rs  course.rs  mod.rs  purchase.rs  user.rs
src/schema/: admin.rs  mod.rs  user.rs
src/test_init_app/: mod.rs
