[package]
name = "course-selling"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"]}
thiserror = "2.0.12"
