[package]
name = "course-selling"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"]}
thiserror = "2.0.12"
argon2 = "0.5.3"
derive_more = "2.0.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
futures-util = "0.3.31"
